build_log_v2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
.\gradlew.bat : C:\Users\S
amhith\AndroidStudioProjec
ts\HospitalAppJava\app\src
\main\java\com\samhith\hos
pitalappjava\BackupWorker.
java:12: error: cannot 
access ListenableFuture
At line:1 char:1
+ .\gradlew.bat 
:app:compileDebugJava 
--console=plain *>&1 | 
Out-File - ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~
    + CategoryInfo        
      : NotSpecified: (C  
  :\Users\Samhit...iste   
 nableFuture:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
public class BackupWorker 
extends Worker {
       ^
  class file for com.googl
e.common.util.concurrent.L
istenableFuture not found
Note: Some input files 
use or override a 
deprecated API.
Note: Recompile with 
-Xlint:deprecation for 
details.
1 error
[Incubating] Problems report is available at: file:///C:/Users/Samhith/AndroidStudioProjects/HospitalAppJava/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for task 
':app:compileDebugJavaWith
Javac'.
> Compilation failed; see 
the compiler output below.
  C:\Users\Samhith\Android
StudioProjects\HospitalApp
Java\app\src\main\java\com
\samhith\hospitalappjava\B
ackupWorker.java:12: 
error: cannot access 
ListenableFuture
  public class 
BackupWorker extends 
Worker {
         ^
    class file for com.goo
gle.common.util.concurrent
.ListenableFuture not 
found
  Note: Recompile with 
-Xlint:deprecation for 
details.
  Note: Some input files 
use or override a 
deprecated API.
  1 error

* Try:
> Check your code and 
dependencies to fix the 
compilation error(s)
> Run with --scan to get 
full insights.

BUILD FAILED in 5s
18 actionable tasks: 1 executed, 17 up-to-date
